--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
 // https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-24/gtk/theme/Adwaita/_colors-public.scss
+@use 'sass:color';
+
 $theme_fg_color: "@theme_fg_color";
 $theme_bg_color: "@theme_bg_color";
 $accent_color: "@accent_color";
@@ -26,14 +28,14 @@ window.Bar {
         font-size: 0;
         min-width: 5pt;
         min-height: 5pt;
-        border-radius: 100 * .6;
-        box-shadow: inset 0 0 0 1 #f0f;
-        margin: 0 10 * .5;
-        transition: 25* .5;
+        border-radius: 10px * .6;
+        /* box-shadow: inset 0 0 0 1 #f0f; */
+        margin: 0 10px * .5;
+        transition: 200ms;
         background: #{$theme_bg_color};
 
         &.occupied {
-            background-color: transparentize(#ff0, .2);
+            background-color: color.adjust(#0f0, $alpha: -0.2);
             min-width: 7pt;
             min-height: 7pt;
         }
@@ -52,10 +54,10 @@ window.Bar {
     &.active,
     &:active {
         label {
-            background-color: transparentize(#f0f, .3);
+            background-color: color.adjust(#f0f, $alpha: -0.3);
 
             &.occupied {
-                background-color: transparentize(#f0f, .15);
+                background-color: color.adjust(#f0f, $alpha: -0.3)
             }
 
             &.active {
